# vidyaAI-multilang-chatbot

./: .gitignore  DOCKER.md  Dockerfile  README.md  bm25_encoder.json  config.py  debug_citations.py  deep_deive.md  docker-compose.yml  graph.py  main.py  pyproject.toml  repro_lang_switch.py  start.sh  state.py  test_tokens.py
agents/: __init__.py  base.py  conversational_agent.py  general_agent.py  interactive_student_agent.py  react_agent.py  student_agent.py  teacher_agent.py
docs/: DOCS_SUMMARY.txt  DOCUMENTATION_INDEX.md  FINAL_IMPLEMENTATION.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  START_HERE.md  TECHNICAL_DEEP_DIVE.md
models/: __init__.py  chat.py  domain.py
nodes/: __init__.py  analyze_query.py  conversational_agent_node.py  general_agent_node.py  groundedness_check.py  interactive_student_agent_node.py  load_memory.py  parse_session_context.py  react_agent_node.py  retrieve_documents.py  save_memory.py  student_agent_node.py  teacher_agent_node.py  translate_response.py
reports/: token_usage_report_combined.json  token_usage_report_token_test_3b3b1cbe.json  token_usage_report_token_test_3b3b1cbe.md  token_usage_report_token_test_en_bef36c.json  token_usage_report_token_test_en_bef36c.md  token_usage_report_token_test_en_c15ac0.json  token_usage_report_token_test_en_c15ac0.md  token_usage_report_token_test_en_c6a125.json  token_usage_report_token_test_en_c6a125.md  token_usage_report_token_test_hi_dbc305.json  token_usage_report_token_test_hi_dbc305.md  token_usage_report_token_test_mr_c5448d.json  token_usage_report_token_test_mr_c5448d.md
(+47 files in other folders)
